# arch-review

./: .gitignore  README.md  arch_components.txt  design_spec.yaml  pyproject.toml
.github/instructions/: general.instructions.md  prompt.md
arch-review/: main.py  run_converter.py
documents/: architecture-example.pptx
